--- a/src/styles.css
+++ b/src/styles.css
@@ -7,4 +7,36 @@ body {
   color: #FFFAFA;
 }
 
+a {
+  color: #F15DC6;
+}
+a:visited {
+  color: #d6129d;
+}
+
+form,
+input {
+  color: #FFFAFA !important;
+}
+
+.clock-app {
+  background: #202B3B;
+  max-width: 600px;
+  margin: 45px auto;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 16px;
+  padding: 30px;
+}
+.clock-app .city-row .col-time {
+  text-align: center;
+}
+
+footer {
+  margin-top: 30px;
+  border-top: 1px solid #36404e;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 12px;
+}
+
 /*# sourceMappingURL=styles.css.map */
