--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,39 @@ body {
     font-family: 'Nunito', sans-serif;
     color: $white;
 }
+
+a {
+    color: $accent;
+
+    &:visited {
+        color: $accent-darker;
+    }
+}
+
+form,
+input {
+    color: $white !important;
+}
+
+.clock-app {
+    background: $surfaces;
+    max-width: 600px;
+    margin: 45px auto;
+    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+    border-radius: 16px;
+    padding: 30px;
+
+    .city-row{
+        .col-time{
+            text-align: center;
+        }
+    }
+}
+
+footer {
+    margin-top: 30px;
+    border-top: 1px solid $items;
+    padding: 30px 0 0 0;
+    text-align: center;
+    font-size: 12px;
+}
