--- a/src/styles.css
+++ b/src/styles.css
@@ -22,19 +22,31 @@ input {
 .clock-app {
   background: #202B3B;
   max-width: 600px;
-  margin: 45px auto;
-  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  margin: 50px auto;
   border-radius: 16px;
   padding: 30px;
 }
+.clock-app .city-row {
+  padding: 30px;
+  border-bottom: 1px solid #36404e;
+}
+.clock-app .city-row h2 {
+  margin: 0;
+  padding: 0;
+}
+.clock-app .city-row .col-city .col-city-date {
+  opacity: 0.5;
+}
 .clock-app .city-row .col-time {
+  color: #F15DC6;
   text-align: center;
+  font-size: 2.5em;
 }
 
 footer {
   margin-top: 30px;
   border-top: 1px solid #36404e;
-  padding: 30px 0 0 0;
+  padding-top: 20px;
   text-align: center;
   font-size: 12px;
 }
