--- a/src/styles.css
+++ b/src/styles.css
@@ -27,8 +27,8 @@ input {
   padding: 30px;
 }
 .clock-app .city-row {
-  padding: 30px;
-  border-bottom: 1px solid #36404e;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .clock-app .city-row h2 {
   margin: 0;
@@ -44,7 +44,6 @@ input {
 }
 
 footer {
-  margin-top: 30px;
   border-top: 1px solid #36404e;
   padding-top: 20px;
   text-align: center;
